--- a/perf/stats/stats-by-period.tex
+++ b/perf/stats/stats-by-period.tex
@@ -170,8 +170,8 @@
 
     \begin{tabularx}{\textwidth}{lXXXX}
         \multicolumn{1}{c}{} & \multicolumn{1}{c}{Latency (ms)} & \multicolumn{1}{c}{CPU Utilisation (\%)} & \multicolumn{1}{c}{Message Loss (\%)} & \multicolumn{1}{c}{Throughput (M/s)} \vspace*{4pt} \\
-        \rotatebox[]{90}{1 Hz} & \plotlat{1 Hz}{1hz} & \plotcpu{1 Hz}{1hz} & \plotloss{1 Hz}{1hz} & \plotthrough{1 Hz}{1hz}{500} \\
-        \rotatebox[]{90}{2 Hz} & \plotlat{2 Hz}{2hz} & \plotcpu{2 Hz}{2hz} & \plotloss{2 Hz}{2hz} & \plotthrough{2 Hz}{2hz}{1000} \\
+        %\rotatebox[]{90}{1 Hz} & \plotlat{1 Hz}{1hz} & \plotcpu{1 Hz}{1hz} & \plotloss{1 Hz}{1hz} & \plotthrough{1 Hz}{1hz}{500} \\
+        %\rotatebox[]{90}{2 Hz} & \plotlat{2 Hz}{2hz} & \plotcpu{2 Hz}{2hz} & \plotloss{2 Hz}{2hz} & \plotthrough{2 Hz}{2hz}{1000} \\
         \rotatebox[]{90}{10 Hz} & \plotlat{10 Hz}{10hz} & \plotcpu{10 Hz}{10hz} & \plotloss{10 Hz}{10hz} & \plotthrough{10 Hz}{10hz}{2000} \\
     \end{tabularx}
 
